k8s/services/guild-service/overlays/dev/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: guild-ingressroute
  labels:
    app: guild
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`dev.viscord.app`) && (PathPrefix(`/api/guilds`) || PathPrefix(`/api/users/me/channels`) || PathPrefix(`/api/invites`) || (PathPrefix(`/api/channels`) && !PathRegexp(`^/api/channels/[^/]+/(messages|attachments)`)))
      services:
        - name: guild-service
          port: 3000
      middlewares:
        - name: strip-api-prefix
        - name: forward-auth
